--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Blog Title"
-author: "Blog Author"
-description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
+title: "Evan Gale"
+author: "Evan Gale"
+description: "Relativistic Quantum Mechanics, Quantum Field Theory, Foundations of Physics"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
@@ -8,7 +8,7 @@ date_format: "%B %d, %Y"
 
 # Layout
 
-show_excerpts: true        # show article excerpts on the home page
+show_excerpts: false       # show article excerpts on the home page
 show_frame: true           # adds a gray frame to the site
 show_sidebar: false        # show a sidebar instead of the usual header
 minimal: false             # use a dark header
@@ -16,13 +16,13 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html"}
-  - {file: "README.md"}
+  - {title: "About", file: "index.html", icon: home}
+  - {title: "Publications", url: "https://scholar.google.com/citations?user=UxEgOygAAAAJ"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:niklasbuschmann@users.noreply.github.com"}
-  - {title: Github, icon: github, url: "https://github.com/niklasbuschmann/contrast"}
-  - {title: Subscribe, icon: rss, url: "/feed.xml"}
+  - {title: Mail, icon: envelope, url: "mailto:thatevangale@gmail.com"}
+  - {title: Mastodon, icon: mastodon, url: "https://mathstodon.xyz/@warblewarble"}
+  - {title: ORCID, icon: orcid, url: "https://orcid.org/0000-0002-6303-5492"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
