--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {title: "About", file: "index.html", icon: home}
+  - {title: "About me", file: "index.html"}
   - {title: "Publications", url: "https://scholar.google.com/citations?user=UxEgOygAAAAJ"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
