--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Evan Gale"
 author: "Evan Gale"
-description: "Relativistic Quantum Mechanics, Quantum Field Theory, Foundations of Physics"
+description: "University of Queensland, EQUS"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
