--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {title: "About me", file: "index.md"}
+  # - {title: "About me", file: "index.md"}
   - {title: "Publications", url: "https://scholar.google.com/citations?user=UxEgOygAAAAJ"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
