--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {title: "Publications", url: "https://scholar.google.com/citations?user=UxEgOygAAAAJ"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:thatevangale@gmail.com"}
+  - {title: Mail, icon: envelope, url: "mailto:thatevangale@protonmail.com"}
   - {title: Mastodon, icon: mastodon, url: "https://mastodon.social/@thatevangale"}
   - {title: ORCID, icon: orcid, url: "https://orcid.org/0000-0002-6303-5492"}
 
